--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body class="max-w-6xl mx-auto shadow-lg rounded-lg p-6  mt-5">
 
+  
   <!-- Header section -->
   <header>
     <nav class="flex justify-between items-center mb-6 shadow-lg rounded-lg p-4">
@@ -22,10 +23,10 @@
           <div class="flex gap-2 bg-gray-100 px-2 py-1 items-center justify-center rounded-full">
             <img src="images/checkbox.png" alt="" class=" h-5 w-5 text-2xl">
 
-          <p class="text-2xl font-bold">23</p>
+          <p id="checkNumber" class="text-2xl font-bold">23</p>
           </div>
 
-          <button class="btn rounded-full  py-2 px-2">
+          <button id="changeColorBtn" class="btn rounded-full  py-2 px-2">
              <img src="images/theme-btn.png" alt="" class="h-8 w-8">
           </button>
      
@@ -42,18 +43,13 @@
       <img src="images/checkbox.png" alt="" class=" h-5 w-5 text-2xl">
        <div>
         <p class="text-gray-600">Task Assigned</p>
-        <p class="text-2xl font-bold">6</p>
+        <p id="taskNumber" class="text-2xl font-bold">6</p>
        </div>
     </div>
 
-    <!-- 2 number button -->
-    <!-- <div class="col-span-2">
-        <button class="text-2xl  bg-gradient-to-r from-blue-500 to-purple-600 btn text-white p-4 rounded-lg flex gap-10 ">
-          <img  src="images/board.png" alt="">
-          Discover Something <br>New Today!</button>
-    </div> -->
+    
 
-    <button class=" col-span-2 flex bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg gap-6 text-white text-xl p-4 items-center">
+    <button id="goToAnotherPage" class=" col-span-2 flex bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg gap-6 text-white text-xl p-4 items-center">
       <img src="images/board.png" alt="">
       Discover Something <br>New Today!
     </button>
@@ -78,7 +74,7 @@
       </p>
       <div class="mt-4 flex justify-between items-center">
           <span class="text-sm text-gray-600">Deadline <br> <strong>21 March 2025</strong></span>
-          <button class="bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
+          <button id="" class="completeBtnOne bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
       </div>
   </div>
  <!-- Card 2 -->
@@ -90,7 +86,7 @@
       </p>
       <div class="mt-4 flex justify-between items-center">
           <span class="text-sm text-gray-600">Deadline <br> <strong>25 March 2025</strong></span>
-          <button class="bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
+          <button class="completeBtnOne  bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
       </div>
   </div>
   <!-- Card 3 -->
@@ -102,7 +98,7 @@
       </p>
       <div class="mt-4 flex justify-between items-center">
           <span class="text-sm text-gray-600">Deadline <br> <strong>31 March 2025</strong></span>
-          <button class="bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
+          <button class="completeBtnOne bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
       </div>
   </div>
   <!-- Card 4 -->
@@ -114,7 +110,7 @@
       </p>
       <div class="mt-4 flex justify-between items-center">
           <span class="text-sm text-gray-600">Deadline <br> <strong>21 March 2025</strong></span>
-          <button class="bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
+          <button class="completeBtnOne  bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
       </div>
   </div>
   <!-- Card  5-->
@@ -126,7 +122,7 @@
       </p>
       <div class="mt-4 flex justify-between items-center">
           <span class="text-sm text-gray-600">Deadline <br> <strong>01 April 2025</strong></span>
-          <button class="bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
+          <button class="completeBtnOne bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
       </div>
   </div>
   <!-- Card  6-->
@@ -138,7 +134,7 @@
       </p>
       <div class="mt-4 flex justify-between items-center">
           <span class="text-sm text-gray-600">Deadline <br> <strong>21 March 2025</strong></span>
-          <button class="bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
+          <button class="completeBtnOne bg-indigo-600 text-white px-4 py-2 text-sm rounded-lg">Completed</button>
       </div>
   </div>
 
@@ -165,6 +161,7 @@
 
 
 <script src="scripts/main.js"></script>
+<script src="scripts/challange.js"></script>
    
 </body>
 </html>
