--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- main section start -->
  <main class="flex gap-2 ">
 
-  <section class="border w-5/6">
+  <section class=" w-5/6">
        <!-- Overview Section -->
 
   <div class="grid grid-cols-4 gap-4 p-4 mb-6">
